--- a/01-upvote/app/index.html
+++ b/01-upvote/app/index.html
@@ -27,7 +27,7 @@
     </div>
   </div>
 
-  <script src="https://unpkg.com/vue"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
   <script src="./seed.js"></script>
   <script src="./main.js"></script>
 </body>
